Fix a crash when painting on the scratchpad

BUG:450151